examples/conformance/invalid/invalid_performed_by_wrong_resource_kind.flo
spec_version: "0.1"

process:
  id: invalid_performed_by_wrong_resource_kind
  name: Invalid Performed By Wrong Resource Kind

items:
  - id: request
    name: Request
    kind: information

resources:
  - id: robot_arm
    name: Robot Arm
    kind: equipment

steps:
  - id: start
    kind: start

  - id: execute
    kind: task
    consumes: [request]
    performed_by: [robot_arm]

  - id: end
    kind: end

transitions:
  - source: start
    target: execute
  - source: execute
    target: end